# backend/src/router/v1Router.ts
@@ -4,6 +4,7 @@ import authRouter from "../resources/auth/auth.router";
 import playerRouter from "../resources/player/player.router";
 import gamePlayerRouter from "../resources/gamePlayer/gamePlayer.router";
 import transactionRouter from "../resources/transaction/transaction.router";
+import playerProfileRouter from "../resources/playerProfile/playerProfile.router";
 
 const router = Router();
 
@@ -35,6 +36,12 @@ router.use(
     "/game-players",
     // #swagger.tags = ['GamePlayers']
     gamePlayerRouter
+);
+
+router.use(
+    "/player-profiles",
+    // #swagger.tags = ['PlayerProfiles']
+    playerProfileRouter
 );
 
 export default router;
